# chat-cli

./: .env.example  .flake8  .gitignore  Makefile  README.md  chat_cli  install.bat  install.sh  pyproject.toml  setup.py
src/: __init__.py  client.py  main.py
tests/: test_client.py  test_main.py
